# histogram-of-oriented-gradient

./: CMakeLists.txt  README.md  hog.cpp
